2011-02-05    <Jim@LS-RED>

	* QtSpim/menu.cpp [Dave Reed <dreed@capital.edu>]:
	Single stepping after hitting a breakpoint started at the
	beginning of the program.

2011-01-18    <Jim@LS-RED>

	* Documentation/SourceForge/readme.txt [Sergio Barrachina Mir <barrachi@icc.uji.es>]:
	Installed Mac OS X version of QtSpim.

2011-01-09    <Jim@X64PC>

	* Version 9.0.5 released:

	* QtSpim/README, QtSpim/datawin.cpp, QtSpim/menu.cpp,
	QtSpim/regtextedit.h, QtSpim/regwin.cpp, QtSpim/settings.ui,
	QtSpim/spimview.h, QtSpim/spimview.ui, QtSpim/state.cpp:
	Renamed st_intRegBase -> st_regDisplayBase and used base setting
	to display FP registers.
	Changed inconsistent use of QtSPIM -> QtSpim.
	Dropped octal display format for register and data.
	FP registers can be displayed in hex or binary.
	FP registers can be set.
	Right click to set register display format.
	Enhancement from setting registers also applied to data segment.

2011-01-08    <Jim@LS-RED>

	* Version 9.0.4 released:

	* QtSpim/QtSpim.pro, QtSpim/regtextedit.h, QtSpim/regwin.cpp,
	QtSpim/spimview.h, QtSpim/changevalue.ui [Mitko <asdfgga12@gmail.com>]:
	Set value of register as either a decimal or hexadecimal value.
	Fixed help file build for Windows.

2011-01-05    <Jim@LS-RED>

	* PCSpim_9.0.2.zip, PCSpim_9.0.3.zip:
	Icons for shortcut not properly set. Wrong installation banner.

2011-01-04    <Jim@LS-RED>

	* PCSpim_9.0.1.zip:
	New release to correct a bug in the deployment that included the
	debug rather than release binary, which conflicted with libraries.

2011-01-02    <Jim@X64PC>

	* Version 9.0.1 released:

	* QtSpim/menu.cpp:
	Update register display when single stepping.

	* QtSpim/datawin.cpp, QtSpim/menu.cpp, QtSpim/regwin.cpp, QtSpim/textwin.cpp:
	Scroll windows to top when reinitialized; otherwise leave at same place.

2011-01-01  Jim Larus  <jim@linuxPC>

	* Version 9.0 released:

	* Setup/qtspim_debian/depolyment/qtspim.desktop, bin/release-debain:
	Added Linux desktop entry and icon.
